--- a/src/assets/styles/components/attractions-city/attractions-city-about.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-about.scss
@@ -164,6 +164,10 @@
     display: block;
   }
 
+  .attractions-sidebar__block--orange {
+    display: grid;
+  }
+
   .attractions-sidebar__block--orange,
   .attractions-sidebar__block--verified {
     @include min-screen(laptop) {
