--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -41,8 +41,10 @@ $blue-500: #1F56D8;
 $blue-600: #3663CB;
 $blue-700: #2768C9;
 $blue-800: #386AE0;
+$blue-900: #14448B;
 
 $gray-400: #A1ABB9;
+$gray-800: #64749A;
 
 $green-300: #0BAB8B;
 $green-400: #23C1A1;
