--- a/src/assets/styles/components/attractions-city/attractions-city-types.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-types.scss
@@ -110,6 +110,7 @@
     .swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
       left: 20px;
       bottom: 0;
+      width: calc(100% - 40px);
     } 
   }
 }
