update how to book

--- a/src/views/components/how-to-book/how-to-book-questions.pug
+++ b/src/views/components/how-to-book/how-to-book-questions.pug
@@ -3,7 +3,7 @@ section.how-to-book-questions
     .how-to-book-questions__wrapper
       .how-to-book-questions__block
         .how-to-book-questions__content
-          h2.how-to-book-questions__title
-          p.how-to-book-questions__text
+          h2.how-to-book-questions__title Остались вопросы?
+          p.how-to-book-questions__text Если у Вас возникли вопросы по бронированию или работе сайта, и Вы не нашли их в разделах выше, задайте нам вопрос по телефону: <a href="tel:+7 499 703-01-20">+7 499 703-01-20</a>
         .how-to-book-questions__icon  
-          svg
+          img(src="/assets/images/how-to-book/icon.svg" alt="icon")
