--- a/src/assets/styles/components/how-to-book/how-to-book-questions.scss
+++ b/src/assets/styles/components/how-to-book/how-to-book-questions.scss
@@ -2,4 +2,35 @@
   padding-top: 40px;
   padding-bottom: 50px;
   background-color: $bg-blue;
+
+  &__block {
+    border-radius: 10px;
+    background-color: $white;
+    box-shadow: 0px 12px 35px 0px rgba($color: $gray-800, $alpha: 0.15), 0px 0px 6px 0px rgba($color: $blue-900, $alpha: 0.05);
+    padding: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__text {
+    margin-top: 24px;
+    font-size: 18px;
+    line-height: 24px;
+    color: rgba($color: $black-300, $alpha: 0.75);
+    max-width: 815px;
+    a {
+      color: $black-400;
+      font-weight: 600;
+      &:active {
+        color: $orange-500;
+      }
+      @include min-screen(laptop) {
+        transition: color $transition-default;
+        &:hover {
+          color: $orange-500;
+        }
+      }
+    }
+  }
 }
