--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -26,6 +26,7 @@ $black: #000000;
 $black-300: #474F5A;
 $black-400: #263141;
 $black-500: #263238;
+$black-550: #194A66;
 $black-600: #0D192B;
 $black-700: #0D192B;
 
