--- a/src/assets/styles/components/how-to-book-inner/how-to-book-inner-hero.scss
+++ b/src/assets/styles/components/how-to-book-inner/how-to-book-inner-hero.scss
@@ -1,6 +1,6 @@
-.how-to-book-hero {
+.how-to-book-inner-hero {
   padding-top: 90px;
-  padding-bottom: 40px;
+  padding-bottom: 35px;
   background-color: $bg-blue;
 
   &__wrapper {
