--- a/src/views/components/icons.pug
+++ b/src/views/components/icons.pug
@@ -266,3 +266,5 @@ svg(style="display: none")
     <path d="M6.66699 9.99998L11.042 14.1666L18.3337 5.83331" stroke="#0BAB8B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
     <path d="M13.3337 5.83331L10.417 9.16665" stroke="#0BAB8B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 
+  symbol#svg-bubble-tail
+    <path d="M-4.17546e-07 9.55234C-4.17546e-07 9.55234 17.5342 20.8415 32 18.739C32 12.5918 32 14.7627 32 1.39876e-06C23.2329 15.6311 -4.17546e-07 9.55234 -4.17546e-07 9.55234Z" fill="white"/>
