--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -76,3 +76,9 @@
 @import "./components/how-to-book/how-to-book-hero";
 @import "./components/how-to-book/how-to-book-types";
 @import "./components/how-to-book/how-to-book-questions";
+
+@import "./components/how-to-book-inner/how-to-book-inner";
+@import "./components/how-to-book-inner/how-to-book-inner-hero";
+@import "./components/how-to-book-inner/how-to-book-inner-video";
+@import "./components/how-to-book-inner/how-to-book-inner-manual";
+@import "./components/how-to-book-inner/how-to-book-inner-faq";
