--- a/src/assets/styles/components/about/about-video.scss
+++ b/src/assets/styles/components/about/about-video.scss
@@ -57,10 +57,10 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      box-shadow: 0px 20px 30px 0px #194A6633;
+      box-shadow: 0px 20px 30px 0px rgba($color: $black-550, $alpha: 0.2);
       stroke: transparent;
       border-radius: 50%;
-      fill: $orange-500;
+      fill:  $orange-500;
       fill-opacity: 0.75;
       @include max-screen(tablet) {
         width: 70px;
