update how to book

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -76,6 +76,7 @@
 @import "./components/how-to-book/how-to-book-hero";
 @import "./components/how-to-book/how-to-book-types";
 @import "./components/how-to-book/how-to-book-questions";
+@import "./components/how-to-book/how-to-book-popup";
 
 @import "./components/how-to-book-inner/how-to-book-inner";
 @import "./components/how-to-book-inner/how-to-book-inner-hero";
