--- a/src/views/components/how-to-book-inner/how-to-book-inner-faq.pug
+++ b/src/views/components/how-to-book-inner/how-to-book-inner-faq.pug
@@ -1,7 +1,7 @@
 section.how-to-book-inner-faq
   .wrapper
     .how-to-book-inner-faq__wrapper
-      h2.how-to-book-inner-faq__title Как забронировать санаторий
+      h2.how-to-book-inner-faq__title Вопросы и ответы
       p.how-to-book-inner-faq__text Собрали для Вас ответы на все популярные вопросы по темам:
       .how-to-book-inner-faq__buttons
         button.how-to-book-inner-faq__button.active(type="button" data-id="1") Общее
@@ -11,32 +11,44 @@ section.how-to-book-inner-faq
         .how-to-book-inner-faq__item
           .how-to-book-inner-faq__question
             h3 Есть льготы военным, пенсионерам, инвалидам, и по скидочным купонам?
+            svg(width="10" height="16" viewBox="0 0 10 16")
+              use(xlink:href="#svg-arrow-right")
           .how-to-book-inner-faq__answer
             p Льготными путевками наша компания не занимается, но мы можем предоставить дополнительную скидку при бронировании путевки от нашей компании.
         .how-to-book-inner-faq__item
           .how-to-book-inner-faq__question
             h3 Есть льготы военным, пенсионерам, инвалидам, и по скидочным купонам?
+            svg(width="10" height="16" viewBox="0 0 10 16")
+              use(xlink:href="#svg-arrow-right")
           .how-to-book-inner-faq__answer
             p Льготными путевками наша компания не занимается, но мы можем предоставить дополнительную скидку при бронировании путевки от нашей компании.
         .how-to-book-inner-faq__item
           .how-to-book-inner-faq__question
             h3 Есть льготы военным, пенсионерам, инвалидам, и по скидочным купонам?
+            svg(width="10" height="16" viewBox="0 0 10 16")
+              use(xlink:href="#svg-arrow-right")
           .how-to-book-inner-faq__answer
             p Льготными путевками наша компания не занимается, но мы можем предоставить дополнительную скидку при бронировании путевки от нашей компании.
       .how-to-book-inner-faq__items(data-id="2")
         .how-to-book-inner-faq__item
           .how-to-book-inner-faq__question
-            h3 военным
+            h3 Есть льготы военным, пенсионерам, инвалидам, и по скидочным купонам?
+            svg(width="10" height="16" viewBox="0 0 10 16")
+              use(xlink:href="#svg-arrow-right")
           .how-to-book-inner-faq__answer
             p Льготными путевками наша компания не занимается, но мы можем предоставить дополнительную скидку при бронировании путевки от нашей компании.
       .how-to-book-inner-faq__items(data-id="3")
         .how-to-book-inner-faq__item
           .how-to-book-inner-faq__question
-            h3 инвалидам
+            h3 Есть льготы военным, пенсионерам, инвалидам, и по скидочным купонам?
+            svg(width="10" height="16" viewBox="0 0 10 16")
+              use(xlink:href="#svg-arrow-right")
           .how-to-book-inner-faq__answer
             p Льготными путевками наша компания не занимается, но мы можем предоставить дополнительную скидку при бронировании путевки от нашей компании.
         .how-to-book-inner-faq__item
           .how-to-book-inner-faq__question
             h3 Есть льготы военным, пенсионерам, инвалидам, и по скидочным купонам?
+            svg(width="10" height="16" viewBox="0 0 10 16")
+              use(xlink:href="#svg-arrow-right")
           .how-to-book-inner-faq__answer
             p Льготными путевками наша компания не занимается, но мы можем предоставить дополнительную скидку при бронировании путевки от нашей компании.
