--- a/src/views/components/how-to-book-inner/how-to-book-inner-manual.pug
+++ b/src/views/components/how-to-book-inner/how-to-book-inner-manual.pug
@@ -18,6 +18,8 @@ section.how-to-book-inner-manual
               li.how-to-book-inner-manual__item Нажмите Запросить бронирование и введите контактные данные. Заявка оформлена и менеджер очень скоро свяжется!
           .how-to-book-inner-manual__img
             img(src="/assets/images/how-to-book/step-1.png" alt="step-1" loading="lazy")
+          .how-to-book-inner-manual__title
+            h2 Поиск и подбор путевки
 
         .how-to-book-inner-manual__step.how-to-book-inner-manual__step--reverse
           .how-to-book-inner-manual__block
@@ -33,7 +35,9 @@ section.how-to-book-inner-manual
               p Если нет доступа к электронной почте, мы отправим их на WhatsApp или Viber. Если нужны оригиналы документов, скажите это Вашему менеджеру и мы оформим отправку заказным письмом.
           .how-to-book-inner-manual__img
             img(src="/assets/images/how-to-book/step-2.png" alt="step-2" loading="lazy")
-        
+          .how-to-book-inner-manual__title
+            h2 Поиск и подбор путевки
+
         .how-to-book-inner-manual__step
           .how-to-book-inner-manual__block
             h2 Оплата путевки
@@ -47,7 +51,9 @@ section.how-to-book-inner-manual
               p После оплаты Вы получите электронный чек на электронную почту или в СМС в зависимости от способа оплаты. Тут добавить какой то текст
           .how-to-book-inner-manual__img
             img(src="/assets/images/how-to-book/step-3.png" alt="step-3" loading="lazy")
-        
+          .how-to-book-inner-manual__title
+            h2 Поиск и подбор путевки
+
         .how-to-book-inner-manual__step.how-to-book-inner-manual__step--reverse
           .how-to-book-inner-manual__block
             h2 Заезд и заселение
@@ -60,4 +66,5 @@ section.how-to-book-inner-manual
               li.how-to-book-inner-manual__item Для детей: Свидетельство о рождении и, если это санаторий, справка о санэпидокружении (для детей).
           .how-to-book-inner-manual__img
             img(src="/assets/images/how-to-book/step-4.png" alt="step-4" loading="lazy")
-        
+          .how-to-book-inner-manual__title
+            h2 Поиск и подбор путевки
