--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -105,6 +105,7 @@ html(lang="ru")
 
     include ../components/reviews/reviews-popup
     include ../components/reviews/reviews-create-popup
+    include ../components/how-to-book/how-to-book-popup
 
     include ../components/footer
 
