--- a/src/assets/styles/components/how-to-book-inner/how-to-book-inner-video.scss
+++ b/src/assets/styles/components/how-to-book-inner/how-to-book-inner-video.scss
@@ -1,34 +1,54 @@
 .how-to-book-inner-video {
-  padding-top: 35px;
-  padding-bottom: 25px;
   background-color: $bg-blue;
+  @include max-screen(tablet) {
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
+  @include min-screen(tablet-2x) {
+    padding-top: 35px;
+    padding-bottom: 25px;
+  }
 
   &__wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 32px;
+    @include max-screen(tablet) {
+      border: 1px solid rgba($color: $blue-700, $alpha: 0.15);
+      border-radius: 8px;
+      padding: 20px 24px;
+      gap: 20px;
+    }
+    @include min-screen(tablet-2x) {
+      gap: 32px;
+    }
   }
 
   &__media {
     position: relative;
-    width: auto;
-    height: 150px;
     @include min-screen(tablet-2x) {
+      height: 150px;
+      width: auto;
     }
-
     svg {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
       box-shadow: 0px 20px 30px 0px rgba($color: $black-550, $alpha: 0.2);
       stroke: transparent;
       border-radius: 50%;
       fill:  $orange-500;
       fill-opacity: 0.75;
-      width: 72px;
-      height: 72px;
+      
+      @include max-screen(tablet) {
+        width: 60px;
+        height: 60px;
+      }
+      @include min-screen(tablet-2x) {
+        width: 72px;
+        height: 72px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
 
     button {
@@ -58,7 +78,12 @@
     width: 100%;
     height: 100%;
     // box-shadow: 30px 35px 90px 0px #64749A66;
-
+    @include max-screen(tablet) {
+      display: none;
+    }
+    @include min-screen(tablet-2x) {
+      display: block;
+    }
     img {
       width: 100%;
       height: 100%;
@@ -67,17 +92,28 @@
 
   &__link {
     display: flex;
-    gap: 16px;
     align-items: flex-end;
+    @include max-screen(tablet) {
+      gap: 8px;
+    }
+    @include min-screen(tablet-2x) {
+      gap: 16px;
+    }
 
     a {
-      font-size: 24px;
       font-weight: 700;
-      line-height: 24px;
       color: $blue-500;
       max-width: max-content;
       &:active {
         color: $orange-500;
+      }
+      @include max-screen(tablet) {
+        font-size: 18px;
+        line-height: 20px;
+      }
+      @include min-screen(tablet-2x) {
+        font-size: 24px;
+        line-height: 24px;
       }
       @include min-screen(laptop) {
         transition: color $transition-default;
@@ -89,33 +125,52 @@
   }
 
   &__time {
-    font-size: 16px;
     font-weight: 500;
-    line-height: 18px;
     color: $gray-400;
-    padding: 3px 7px;
     background-color: rgba($color: $blue-700, $alpha: 0.07);
     border-radius: 50px;
+    @include max-screen(tablet) {
+      font-size: 14px;
+      line-height: 14px;
+      padding: 3px 5px;
+    }
+    @include min-screen(tablet-2x) {
+      font-size: 16px;
+      line-height: 18px;
+      padding: 3px 7px;
+    }
   }
 
   &__bubble {
-    margin-top: 22px;
+    margin-top: 8px;
     position: relative;
-    background-color: $white;
-    padding: 13px 16px;
-    box-shadow: 0px 4px 25px 0px rgba($color: $gray-800, $alpha: 0.12);
-    border-radius: 8px;
-
-    font-size: 16px;
-    line-height: 18px;
     color: rgba($color: $black-300, $alpha: 0.75);
+    @include max-screen(tablet) {
+      font-size: 12px;
+      line-height: 12px;
+    }
+    @include min-screen(tablet-2x) {
+      background-color: $white;
+      padding: 13px 16px;
+      box-shadow: 0px 4px 25px 0px rgba($color: $gray-800, $alpha: 0.12);
+      border-radius: 8px;
+
+      font-size: 16px;
+      line-height: 18px;
+      margin-top: 22px;
+    }
 
     svg {
-      position: absolute;
-      right: 100%;
-      top: 50%;
-      transform: translateY(-50%);
-      stroke: transparent;
+      @include max-screen(tablet) {
+        display: none;
+      }
+      @include min-screen(tablet-2x) {
+        position: absolute;
+        right: 100%;
+        top: 50%;
+        transform: translateY(-50%);
+        stroke: transparent;
+      }
     }
   }
 }
