--- a/src/assets/styles/components/how-to-book/how-to-book-hero.scss
+++ b/src/assets/styles/components/how-to-book/how-to-book-hero.scss
@@ -1,21 +1,37 @@
 .how-to-book-hero {
-  padding-top: 90px;
-  padding-bottom: 40px;
   background-color: $bg-blue;
+  @include max-screen(tablet) {
+    padding-top: 60px;
+    padding-bottom: 25px;
+  }
+  @include min-screen(tablet-2x) {
+    padding-top: 90px;
+    padding-bottom: 40px;
+  }
 
   &__wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    @include max-screen(tablet) {
+      gap: 20px;
+    }
+    @include min-screen(tablet-2x) {
+      gap: 30px;
+    }
   }
 
   &__text {
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 24px;
     text-align: center;
     color: rgba($color: $black-300, $alpha: 0.75);
-    max-width: 856px;
+    @include max-screen(tablet) {
+      font-size: 16px;
+      line-height: 20px;
+    }
+    @include min-screen(tablet-2x) {
+      max-width: 856px;
+      font-size: 18px;
+      line-height: 24px;
+    }
   }
 }
