--- a/src/assets/styles/components/how-to-book/how-to-book-questions.scss
+++ b/src/assets/styles/components/how-to-book/how-to-book-questions.scss
@@ -1,29 +1,85 @@
 .how-to-book-questions {
   padding-top: 40px;
   padding-bottom: 50px;
-  background-color: $bg-blue;
 
   &__block {
+    position: relative;
+    overflow: hidden;
     border-radius: 10px;
     background-color: $white;
     box-shadow: 0px 12px 35px 0px rgba($color: $gray-800, $alpha: 0.15), 0px 0px 6px 0px rgba($color: $blue-900, $alpha: 0.05);
-    padding: 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @include max-screen(tablet) {
+      padding: 20px 20px 24px 20px;
+    }
+    @include min-screen(tablet-2x) {
+      padding: 40px;
+    }
+  }
+
+  &__content {
+    @include min-screen(tablet-2x) {
+      max-width: 815px;
+    }
+  }
+
+  &__title {
+    font-weight: 700;
+    color: $black-400;
+    @include max-screen(tablet) {
+      font-size: 18px;
+      line-height: 24px;
+    }
+    @include min-screen(tablet-2x) {
+      font-size: 24px;
+      line-height: 30px;
+      margin-bottom: 24px;
+    }
   }
 
   &__text {
-    margin-top: 24px;
-    font-size: 18px;
-    line-height: 24px;
     color: rgba($color: $black-300, $alpha: 0.75);
-    max-width: 815px;
+    @include max-screen(tablet) {
+      margin-top: 16px;
+    }
+    @include min-screen(tablet-2x) {
+      display: inline;
+    }
+  }
+
+  &__link {
+    @include max-screen(tablet) {
+      margin-top: 20px;
+      display: flex;
+      gap: 8px;
+      align-items: center;
+    }
+    @include min-screen(tablet-2x) {
+      display: inline;
+    }
+    svg {
+      stroke: transparent;
+      @include min-screen(tablet-2x) {
+        display: none;
+      }
+    }
     a {
       color: $black-400;
-      font-weight: 600;
       &:active {
         color: $orange-500;
+      }
+      @include max-screen(tablet) {
+        font-size: 16px;
+        line-height: 20px;
+        color: $blue-500;
+        font-weight: 700;
+      }
+      @include min-screen(tablet-2x) {
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 600;
       }
       @include min-screen(laptop) {
         transition: color $transition-default;
@@ -31,6 +87,17 @@
           color: $orange-500;
         }
       }
+    }
+  }
+
+  &__icon {
+    @include max-screen(tablet) {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    @include min-screen(tablet-2x) {
+
     }
   }
 }
