--- a/src/views/pages/how-to-book-inner.pug
+++ b/src/views/pages/how-to-book-inner.pug
@@ -19,9 +19,13 @@ block content
           href: '/how-to-book',
           title: 'Выбрать другое направление',
         },
-      ]
+      ],
+      'Другое направление',
+      '',
+      'breadcrumbs--centered breadcrumbs--blue'
     )
     include ../components/how-to-book-inner/how-to-book-inner-hero
     include ../components/how-to-book-inner/how-to-book-inner-video
     include ../components/how-to-book-inner/how-to-book-inner-manual
     include ../components/how-to-book-inner/how-to-book-inner-faq
+    include ../components/how-to-book/how-to-book-questions
