--- a/src/assets/styles/components/how-to-book/how-to-book-popup.scss
+++ b/src/assets/styles/components/how-to-book/how-to-book-popup.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color: $black-600, $alpha: 0.5);
+  background-color: rgba($color: $black-600, $alpha: 0.75);
   z-index: -1;
   opacity: 0;
   visibility: hidden;
@@ -17,33 +17,28 @@
 
   &__wrapper {
     position: absolute;
-    @include max-screen(tablet) {
-    }
-    @include min-screen(tablet-2x) {
-      // padding: 30px;
-      // width: 856px;
-      // max-height: 853px;
-      // height: calc(100dvh - 100px);
-      // top: 50%;
-      // left: 50%;
-      // transform: translate(-50%, -50%);
-    }
   }
 
-  &__button {
+  &__close {
     position: absolute;
-    top: 20px;
-    right: 20px;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
-    width: 30px;
-    height: 30px;
     border-radius: 6px;
     background-color: rgba($color: $black-600, $alpha: 0.25);
-
+    cursor: pointer;
+    @include max-screen(tablet) {
+      top: 20px;
+      right: 20px;
+      width: 30px;
+      height: 30px;
+    }
+    @include min-screen(tablet-2x) {
+      top: 30px;
+      right: 30px;
+      width: 30px;
+      height: 30px;
+    }
     svg {
       fill: $gray-400;
     }
@@ -54,7 +49,6 @@
     top: 50%;
     transform: translateY(-50%);
     width: 100%;
-
     @include min-screen(tablet-2x) {
       display: flex;
       align-items: center;
@@ -65,20 +59,50 @@
   &__video {
     width: 100%;
     height: 300px;
-    @include min-screen(tablet) {
-      height: 560px;
+    @include mm-screen(mobile) {
+      height: 460px;
     }
-    @include min-screen(tablet-2x) {
+    @include mm-screen(tablet) {
+      width: 100%;
+      height: 500px;
+    }
+    @include mm-screen(tablet-2x) {
       width: 1024px;
-      height: 560px;
+      height: 520px;
     }
-    @include min-screen(laptop) {
+    @include mm-screen(laptop) {
+      width: 1240px;
+      height: 550px;
+    }
+    @include min-screen(desktop) {
       width: 1296px;
       height: 700px;
     }
     iframe {
       height: 100%;
       width: 100%;
+    }
+  }
+
+  &__text {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    @include min-screen(desktop) {
+      bottom: 90px;
+      height: 60px;
+
+    }
+    p {
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 18px;
+      text-align: center;
+      color: $white;
     }
   }
 
