--- a/src/views/components/how-to-book-inner/how-to-book-inner-video.pug
+++ b/src/views/components/how-to-book-inner/how-to-book-inner-video.pug
@@ -4,12 +4,12 @@ section.how-to-book-inner-video
       .how-to-book-inner-video__media
         .how-to-book-inner-video__bg
           img(src="/assets/images/how-to-book/video.svg" alt="how-to-book-video" loading="lazy")
-        button(type="button")
+        button.how-to-book-inner-video__button(type="button")
           svg(width="90" height="90" viewBox="0 0 90 90")
             use(xlink:href="#play-video-orange")
       .how-to-book-inner-video__content
         .how-to-book-inner-video__link
-          a(href="#") Посмотреть <br> видеоинструкцию
+          a.how-to-book-inner-video__button(href="#") Посмотреть <br> видеоинструкцию
           .how-to-book-inner-video__time 2:40
         .how-to-book-inner-video__bubble Все тоже самое, что в инструкции <br> ниже, только в формате видео.
           svg(width="32" height="19" viewBox="0 0 32 19")
