--- a/src/assets/styles/components/how-to-book-inner/how-to-book-inner-faq.scss
+++ b/src/assets/styles/components/how-to-book-inner/how-to-book-inner-faq.scss
@@ -106,6 +106,7 @@
     }
     @include max-screen(tablet) {
       padding: 24px 6px 24px 0;
+      gap: 15px;
     }
     @include min-screen(tablet-2x) {
       padding: 30px 8px 30px 0;
@@ -118,12 +119,16 @@
       }
     }
     h3 {
+      font-family: 'Tilda Sans';
       font-size: 18px;
-      font-weight: 700;
       line-height: 24px;
       color: $black-400;
       @include max-screen(tablet) {
         max-width: 282px;
+        font-weight: 600;
+      }
+      @include min-screen(tablet-2x) {
+        font-weight: 700;
       }
       @include min-screen(laptop) {
         transition: color $transition-default;
@@ -134,6 +139,10 @@
       fill: transparent;
       transform: rotate(90deg);
       transition: transform $transition-default;
+      @include max-screen(tablet) {
+        min-width: 10px;
+        width: 10px;
+      }
     }
   }
 
