--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -83,3 +83,7 @@
 @import "./components/how-to-book-inner/how-to-book-inner-video";
 @import "./components/how-to-book-inner/how-to-book-inner-manual";
 @import "./components/how-to-book-inner/how-to-book-inner-faq";
+
+@import "./components/contacts/contacts-hero";
+@import "./components/contacts/contacts-feedback";
+@import "./components/contacts/contacts-map";
