uppdate main rent page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -87,3 +87,7 @@
 @import "./components/contacts/contacts-hero";
 @import "./components/contacts/contacts-feedback";
 @import "./components/contacts/contacts-map";
+
+@import "./components/main-rent/main-rent-popular";
+@import "./components/main-rent/main-rent-resort";
+@import "./components/main-rent/main-rent-abroad";
