--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -43,6 +43,7 @@ $blue-600: #3663CB;
 $blue-700: #2768C9;
 $blue-800: #386AE0;
 $blue-900: #14448B;
+$blue-950: #154482;
 
 $gray-400: #A1ABB9;
 $gray-800: #64749A;
