--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -17,5 +17,5 @@ block content
     include ./components/main/main-promo
     include ./components/main/main-resorts
     include ./components/main/main-procedures
-    include ./components/main/main-about
+    +main-about('')
     include ./components/main/main-sanatorium
