--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -98,6 +98,7 @@ html(lang="ru")
     include ../mixins/excursion-card
     include ../mixins/attractions-sanatorium
     include ../mixins/attractions-excursion
+    include ../mixins/main-about
 
     include ../components/header
 
