--- a/src/views/components/main-rent/main-rent-popular.pug
+++ b/src/views/components/main-rent/main-rent-popular.pug
@@ -45,6 +45,26 @@ section.main-rent-popular
                   .main-rent-popular__content
                     h3.main-rent-popular__city Казань
                     p.main-rent-popular__text 5 623 варианта
+            .swiper-slide
+              .main-rent-popular__block
+                a(href="/")
+                  span.visually-hidden Санкт-Петербург
+                .main-rent-popular__bg
+                  img(src="/assets/images/main-rent/popular/1.png", alt="popular")
+                .main-rent-popular__container
+                  .main-rent-popular__content
+                    h3.main-rent-popular__city Санкт-Петербург
+                    p.main-rent-popular__text 20 595 вариантов
+            .swiper-slide
+              .main-rent-popular__block
+                a(href="/")
+                  span.visually-hidden Санкт-Петербург
+                .main-rent-popular__bg
+                  img(src="/assets/images/main-rent/popular/1.png", alt="popular")
+                .main-rent-popular__container
+                  .main-rent-popular__content
+                    h3.main-rent-popular__city Санкт-Петербург
+                    p.main-rent-popular__text 20 595 вариантов
         button(type="button", aria-label="Previous").swiper-button-prev
           svg(width="10" height="16" viewBox="0 0 10 16")
             use(xlink:href="#svg-arrow-right")
