--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -34,6 +34,12 @@
 @import "./components/footer";
 @import "./components/footer/footer-reviews";
 @import "./components/footer/footer-confirmation";
+@import "./components/footer/footer-partners";
+@import "./components/footer/footer-city";
+@import "./components/footer/footer-about";
+@import "./components/footer/footer-nav";
+@import "./components/footer/footer-places";
+@import "./components/footer/footer-bottom";
 
 @import "./components/main/main-faq";
 @import "./components/main/main-promo";
