--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -36,6 +36,7 @@ $blue-border: #386AE040;
 $blue-border-light: #2768C926;
 
 $blue-100: #F1F4F9;
+$blue-150: #E3EBF6;
 $blue-300: #0093DD;
 $blue-400: #4E78DA;
 $blue-500: #1F56D8;
