--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -2,3 +2,10 @@ footer.footer
   .wrapper
     include ./footer/footer-reviews
     include ./footer/footer-confirmation
+  include ./footer/footer-partners
+  .wrapper
+    include ./footer/footer-city
+  include ./footer/footer-about
+  include ./footer/footer-nav
+  include ./footer/footer-places
+  include ./footer/footer-bottom
