--- a/src/assets/styles/components/footer/footer-confirmation.scss
+++ b/src/assets/styles/components/footer/footer-confirmation.scss
@@ -1,6 +1,7 @@
 .footer-confirmation {
   background-color: $bg-blue-200;
   border-radius: 10px;
+  margin-bottom: 40px;
   @include max-screen(tablet) {
     padding: 20px;
   }
@@ -8,9 +9,178 @@
     padding: 30px;
   }
 
+  &__wrapper {
+
+    @include min-screen(tablet-2x) {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+
+    @include max-screen(tablet) {
+      flex-direction: row-reverse;
+    }
+    @include min-screen(tablet-2x) {
+      flex-direction: column;
+    }
+  }
+
+  &__title {
+    color: $black-300;
+    margin-bottom: 24px;
+    font-weight: 600;
+    @include max-screen(tablet) {
+      font-size: 16px;
+      line-height: 20px;
+    }
+    @include min-screen(tablet-2x) {
+      font-size: 18px;
+      line-height: 24px;
+    }
+  }
+
   &__text {
+    display: flex;
+    flex-direction: column;
+    @include max-screen(tablet) {
+      gap: 20px;
+    }
+    @include min-screen(tablet-2x) {
+      gap: 16px;
+    }
     p {
-      
+      font-size: 14px;
+      font-weight: 400;
+      color: $black-300;
+      @include max-screen(tablet) {
+        line-height: 20px;
+      }
+      @include min-screen(tablet-2x) {
+        line-height: 24px;
+      }
+      span {
+        display: block;
+        @include max-screen(tablet) {
+          margin-top: 20px;
+        }
+        @include min-screen(tablet-2x) {
+          br {
+            display: none;
+          }
+        }
+      }
+      a {
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 24px;
+        color: $blue-500;
+        &:active {
+          color: $orange-500;
+        }
+        @include max-screen(tablet) {
+          display: block;
+          max-width: max-content;
+        }
+        @include min-screen(laptop) {
+          transition: color $transition-default;
+          &:hover {
+            color: $orange-500;
+          }
+        }
+
+      }
+    }
+    &--large {
+      p {
+        @include max-screen(tablet) {
+          font-size: 14px;
+          line-height: 16px;
+          max-width: 109px;
+        }
+        @include min-screen(tablet-2x) {
+          font-size: 16px;
+          line-height: 24px;
+        }
+      }
+
+    }
+  }
+
+  &__button {
+    margin-top: 30px;
+    background-color: $white;
+    padding: 8px;
+    width: 100%;
+    border-radius: 8px;
+    &:active {
+      span {
+        color: $orange-500;
+      }
+    }
+    @include max-screen(tablet) {
+    }
+    @include min-screen(tablet-2x) {
+      display: none;
+    }
+    span {
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 18px;
+      color: $blue-500;
+    }
+  }
+
+  &-requisites {
+    @include max-screen(tablet) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba($color: $black-600, $alpha: 0.5);
+      z-index: -1;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity $transition-default, z-index $transition-default, visibility $transition-default;
+      &.active {
+        z-index: 2901;
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+    @include min-screen(tablet-2x) {
+      min-width: 577px;
+    }
+
+    &__wrapper {
+      @include max-screen(tablet) {
+        border-radius: 10px 10px 0 0;
+        position: absolute;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background-color: $white;
+      }
+    }
+
+    &__header {
+      padding: 18px 24px;
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid rgba($color: $blue-700, $alpha: 0.12);
+      @include min-screen(tablet-2x) {
+        display: none;
+      }
+    }
+
+    &__main {
+      @include max-screen(tablet) {
+        padding: 30px 24px 40px 24px;
+      }
     }
   }
 }
