--- a/src/views/components/footer/footer-city.pug
+++ b/src/views/components/footer/footer-city.pug
@@ -2,22 +2,38 @@ section.footer-city
   .footer-city__wrapper
     h2.footer-city__title Вас может заинтересовать
     .footer-city__links
-      a.footer-city__link(href="#") Москва
-      a.footer-city__link(href="#") Сочи
-      a.footer-city__link(href="#") Санкт-Петербург
-      a.footer-city__link(href="#") Анапа
-      a.footer-city__link(href="#") Екатеринбург
-      a.footer-city__link(href="#") Калининград 
-      a.footer-city__link(href="#") Краснодар
-      a.footer-city__link(href="#") Казань
-      a.footer-city__link(href="#") Новосибирск
-      a.footer-city__link(href="#") Красноярск
-      a.footer-city__link(href="#") Уфа
-      a.footer-city__link.footer-city__link--hidden(href="#") Москва
-      a.footer-city__link.footer-city__link--hidden(href="#") Сочи
-      a.footer-city__link.footer-city__link--hidden(href="#") Санкт-Петербург
-      a.footer-city__link.footer-city__link--hidden(href="#") Анапа
-      a.footer-city__link.footer-city__link--hidden(href="#") Екатеринбург
+      .footer-city__link
+        a(href="#") Москва
+      .footer-city__link
+        a(href="#") Сочи
+      .footer-city__link
+        a(href="#") Санкт-Петербург
+      .footer-city__link
+        a(href="#") Анапа
+      .footer-city__link
+        a(href="#") Екатеринбург
+      .footer-city__link
+        a(href="#") Калининград 
+      .footer-city__link
+        a(href="#") Краснодар
+      .footer-city__link
+        a(href="#") Казань
+      .footer-city__link
+        a(href="#") Новосибирск
+      .footer-city__link
+        a(href="#") Красноярск
+      .footer-city__link
+        a(href="#") Уфа
+      .footer-city__link
+        a(href="#") Москва
+      .footer-city__link
+        a(href="#") Сочи
+      .footer-city__link
+        a(href="#") Санкт-Петербург
+      .footer-city__link
+        a(href="#") Анапа
+      .footer-city__link
+        a(href="#") Екатеринбург
       button.footer-city__button(type="button")
         span Показать все
         svg(width="10" height="16" viewBox="0 0 10 16")
