--- a/src/assets/styles/components/footer/footer-nav.scss
+++ b/src/assets/styles/components/footer/footer-nav.scss
@@ -174,6 +174,7 @@
     font-weight: 600;
     line-height: 16px;
     color: $black-300;
+    display: inline-block;
     address {
       font-style: normal;
     }
