--- a/src/views/components/footer/footer-nav.pug
+++ b/src/views/components/footer/footer-nav.pug
@@ -63,7 +63,7 @@ nav.footer-nav
             .footer-nav__undergrounds
               .footer-nav__underground
                 svg(width="18" height="12" viewBox="0 0 18 12")
-                  use(xlink:href="#svg-metro")
+                  use(xlink:href="#svg-metro-green")
                 span Метро Трубная (2 мин.)
               .footer-nav__underground
                 svg(width="18" height="12" viewBox="0 0 18 12")
