update colors and width

--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -10,13 +10,8 @@ $screen-tablet: 768px;
 
 $mobile-wrapper: 320px;
 
-$box-shadow-one: #1544821A;
-$box-shadow-two: #4B6AA626;
-$box-shadow-three: #14448B0D;
-
 $bg-blue: #F4F6FA;
-$bg-blue-100: #F4F6FA;
-$bg-blue-200: #EEF3FB;
+$bg-blue-100: #EEF3FB;
 
 $white: #ffffff;
 $white-100: #F2F4F8;
@@ -32,9 +27,6 @@ $black-700: #0D192B;
 
 $cyan-400: #10A2EC;
 
-$blue-border: #386AE040;
-$blue-border-light: #2768C926;
-
 $blue-100: #F1F4F9;
 $blue-150: #E3EBF6;
 $blue-300: #0093DD;
@@ -48,6 +40,7 @@ $blue-950: #154482;
 
 $gray-400: #A1ABB9;
 $gray-800: #64749A;
+$gray-900: #4B6AA6;
 
 $green-300: #0BAB8B;
 $green-400: #23C1A1;
