--- a/src/views/mixins/attractions-excursion.pug
+++ b/src/views/mixins/attractions-excursion.pug
@@ -1,5 +1,5 @@
 mixin attractions-excursion(data)
-  .attractions-excursion(class="" + data.className)
+  section.attractions-excursion(class="" + data.className)
     .wrapper
       .attractions-excursion__wrapper
         .attractions-excursion__header
