--- a/src/assets/styles/components/attractions-city/attractions-city-types.scss
+++ b/src/assets/styles/components/attractions-city/attractions-city-types.scss
@@ -99,12 +99,12 @@
       height: auto;
     }
     &-scrollbar {
-      background-color: $bg-blue-200;
-      @include min-screen(laptop) {
+      background-color: $bg-blue-100;
+      @include min-screen(tablet-2x) {
         display: none;
       }
       &-drag {
-        background-color: $blue-border-light;
+        background-color: rgba($color: $blue-700, $alpha: 0.15);
       }
     }
     .swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
