--- a/src/assets/styles/components/main-rent/main-rent-resort.scss
+++ b/src/assets/styles/components/main-rent/main-rent-resort.scss
@@ -158,7 +158,7 @@
         height: 40px;
         border-radius: 50%;
         background-color: $white;
-        box-shadow: 0px 5px 15px 0px $box-shadow-two, 0px 1px 4px 0px $box-shadow-three;
+        box-shadow: 0px 5px 15px 0px rgba($color: $gray-900, $alpha: 0.15), 0px 1px 4px 0px rgba($color: $blue-900, $alpha: 0.05);
         border-radius: 50%;
         transition: background-color $transition-default;
         svg {
@@ -219,12 +219,12 @@
       }
     }
     &-scrollbar {
-      background-color: $bg-blue-200;
+      background-color: $bg-blue-100;
       @include min-screen(laptop) {
         display: none;
       }
       &-drag {
-        background-color: $blue-border-light;
+        background-color: rgba($color: $blue-700, $alpha: 0.15);
       }
     }
     .swiper-horizontal > .swiper-scrollbar, .swiper-scrollbar.swiper-scrollbar-horizontal {
