--- a/src/assets/styles/components/main/main-faq.scss
+++ b/src/assets/styles/components/main/main-faq.scss
@@ -40,7 +40,7 @@
       border-radius: 10px;
       min-height: 220px;
       padding: 0;
-      box-shadow: 0px 5px 10px 0px $box-shadow-one;
+      box-shadow: 0px 5px 10px 0px rgba($color: $blue-950, $alpha: 0.1);
     }
     & > a {
       inset: 0;
