--- a/src/assets/styles/components/main/main-procedures.scss
+++ b/src/assets/styles/components/main/main-procedures.scss
@@ -161,7 +161,7 @@
     gap: 10px;
     justify-content: center;
     align-items: center;
-    border: 1px solid rgba($color: $blue-border, $alpha: 0.25);
+    border: 1px solid rgba($color: $blue-800, $alpha: 0.25);
     border-radius: 8px;
     padding: 10px 16px;
     width: 100%;
